style: Improve scrollbar, fix dropdown menu

--- a/client/src/Pages/Articles/Articles.css
+++ b/client/src/Pages/Articles/Articles.css
@@ -14,18 +14,6 @@
   overflow-y: scroll;
 }
 
-/* Hide scrollbar */
-
-.article-container::-webkit-scrollbar {
-  display: none;
-}
-.article-container {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
 .article-header {
   display: flex;
   align-items: center;
