--- a/client/src/Pages/Articles/Components/Article/Components/DropdownMenu.css
+++ b/client/src/Pages/Articles/Components/Article/Components/DropdownMenu.css
@@ -1,51 +1,49 @@
-.menu-container{
-    position: relative;
+.menu-container {
+  position: relative;
 }
 
-.dropdown-menu{
-    position: absolute;
-    top:25px;
-    right: -3px;
-    border: 1px solid var(--primary);
-    border-radius: 5px;
+.dropdown-menu {
+  position: absolute;
+  top: 25px;
+  right: -3px;
+  border: 1px solid var(--primary);
+  border-radius: 5px;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .dropdown-menu::before {
-    content: '';
-    position: absolute;
-    top: -15px; 
-    right: 3px; 
-    border-width: 7px; 
-    border-style: solid;
-    border-color: transparent transparent var(--primary) transparent;
-   
+  content: "";
+  position: absolute;
+  top: -15px;
+  right: 3px;
+  border-width: 7px;
+  border-style: solid;
+  border-color: transparent transparent var(--primary) transparent;
 }
 
-.menu-item{
-    color: var(--primary);
-    text-decoration: none;
-    white-space: nowrap;
-    background-color: var(--secondary);
-    border: none;
-    padding: 0.25rem 0.75rem;
-    text-align: left;
+.menu-item {
+  color: var(--primary);
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: var(--secondary);
+  border: none;
+  padding: 0.25rem 0.75rem;
+  text-align: left;
 }
-.dropdown-menu>*:first-child{
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    padding-top: 0.5rem;
+.dropdown-menu > .menu-item:first-child {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-top: 0.5rem;
 }
-.dropdown-menu>*:last-child{
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    padding-bottom: 0.5rem;
+.dropdown-menu > .last-child {
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding-bottom: 0.5rem;
 }
 
-
-.menu-item:hover{
-    cursor: pointer;
-    background-color: var(--primary-transparent);
+.menu-item:hover {
+  cursor: pointer;
+  background-color: var(--primary-transparent);
 }
